# DIoxusWithRapier

./: Cargo.toml
test/: Cargo.toml  Dioxus.toml
test/assets/: main.css
test/src/: main.rs
