[package]
name = "test"
version = "0.1.0"
authors = ["= <=>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
getrandom = { version = "0.2.15", features = ["js"] }
rand = { version = "0.8.5", features = ["std"] }
rapier2d = "0.22.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
